# MoE-MoA-Integrated-Complementary-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  compose.yaml  justfile  pyproject.toml
config/: codex-frontier.example.yaml  codex-frontier.yaml  models.example.yaml  models.yaml  opencode.example.json  tailscale-acl.example.json
docs/: ADAPTER_REGISTRY.md  API_CLIENT_MODES.md  ARCHITECTURE.md  BENCHMARKS.md  CODEX_FRONTIER.md  CONTEXT_TUNING.md  DATASET_PIPELINE.md  DECISIONS.md  EVIDENCE_GRAPH.md  EXECUTION_REPLAY.md  FRONTIER.md  GOAL.md  HERMES_AGENT.md  KNOWLEDGE_BASE.md  LIVE_OBSERVATION.md  LOOP_ENGINEERING.md  MEMORY_OPTIMIZATION.md  MOA_ORCHESTRATION.md  MODEL_COMPATIBILITY.md  MODEL_DOWNLOADS.md  MODEL_LIFECYCLE.md  MVP_BENCHMARK.md  MVP_SCOPE.md  MVP_VALIDATION.md  NVIDIA_NIM.md  OPERATIONS.md  PHASE_AUDIT.md  POLICY_ENGINE.md  PRIVACY_AND_RETENTION.md  RECURSIVE_IMPROVEMENT.md  REMOTE_JUDGE.md  RUNTIME_SELF_IMPROVEMENT.md  RUST_EVALUATION.md  SECURITY.md  SKILLS.md  SKILL_GOVERNANCE.md  SPECIALIST_ROUTING.md  STATE.md  SYSTEMD.md  TRACE_SCHEMA.md  (+3 more)
schemas/: agent-trace-v1.json  agent-trace-v2.json  agent-trace-v3.json  frontier-result-v1.json  frontier-task-v1.json  improvement-proposal-v1.json  training-example-v1.json
scripts/: audit-trace-completeness.sh  benchmark.sh  build-training-dataset.sh  capture-opencode-physical.py  capture-opencode-sse.py  codex-profile.sh  create-improvement-branch.sh  download-models.sh  estimate-model-storage.sh  evaluate-adapter.sh  evaluate-frontier-candidate.sh  evaluate-improvement.sh  export-agentic-traces.sh  finalize-validation-session.py  frontier-status.sh  healthcheck.sh  inspect-environment.sh  inspect-model-repos.sh  install-service.sh  install-systemd-user.sh  mine-improvements.sh  opencode-completion-fake.py  register-adapter.sh  restart-gateway-drained.sh  rollback-lifecycle.sh  run-client-quality-matrix.py  run-frontier-codex.sh  run-mvp-benchmark.sh  run-opencode-staging.py  runtime-status.sh  smoke-test.sh  start-judge.sh  start-model.sh  (+19 more)
(+138 files in other folders)
