[project]
name = "dgx-moa-agent"
version = "2.0.0"
description = "Deterministic OpenAI-compatible MoA gateway for DGX Spark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.28",
  "huggingface-hub>=1.1",
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "uvicorn>=0.34",
  "zstandard>=0.23",
]

[dependency-groups]
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.11",
  "types-pyyaml>=6.0",
]

[project.scripts]
dgx-moa = "dgx_moa.api:main"
dgx-moa-lifecycle = "dgx_moa.lifecycle_admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway/src/dgx_moa"]

[tool.pytest.ini_options]
pythonpath = ["gateway/src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["dgx_moa"]
mypy_path = "gateway/src"
